<resources>
    <string name="app_name">IoTree</string>
    <string name="home_connect_bluetooth">Connect via bluetooth</string>
    <string name="home_connect_internet">Connect via internet</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_device_scan">Device Scan</string>
    <string name="title_activity_my_device">My Device</string>
    <string name="title_select_your_device">Select your device</string>

    <string name="card_device_info">Device info</string>
    <string name="card_wifi_info">Wifi info</string>

    <string name="des_plant_iot">IOT and plant image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported in this device.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="device_name">Device Name</string>
    <string name="device_mac_address">Device Mac Address</string>
    <string name="not_available">N/A</string>
    <string name="ssid">WiFi SSID</string>
    <string name="wifi_password">WiFi Password</string>
    <string name="wifi_set">Set</string>
    <string name="sensor_info">Sensor info</string>
    <string name="temperature">Temperature</string>
    <string name="degree_celcius">°C</string>
    <string name="humidity">Humidity</string>
    <string name="device_control">Device Control</string>
    <string name="water_pump">Water Pump</string>
    <string name="device_password">Password</string>
    <string name="connect">Connect</string>
    <string name="no_device_found">No device found :(</string>
    <string name="timeout">Connection Timeout. Please make sure you have network connection and try again later</string>

</resources>
