<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ble.DeviceControlActivity"
    android:orientation="vertical"
    >
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="50dp"

        >
        <EditText
            android:id="@+id/input_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="SSID"
            android:inputType="textNoSuggestions"
            android:layout_margin="10dp"
            />
        <EditText
            android:id="@+id/input_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="PASS"
            android:layout_margin="10dp"
            />
        <Button
            android:id="@+id/send_wifi_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape_round_corner_normal_primary"
            android:text="Set Wifi credentials"
            android:textColor="@color/txt_white"
            android:padding="15dp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

</LinearLayout>