<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DeviceControlInternetActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_hardware"
                        android:drawablePadding="10dp"
                        android:text="@string/card_device_info"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/device_name"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_device_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:text="@string/not_available"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/device_mac_address"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_device_mac_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:text="@string/not_available"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_sensor"
                        android:drawablePadding="10dp"
                        android:text="@string/sensor_info"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.github.lzyzsd.circleprogress.ArcProgress
                            android:id="@+id/temperature_progress"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_margin="5dp"
                            app:arc_bottom_text="@string/temperature"
                            app:arc_finished_color="@color/colorPrimary"
                            app:arc_progress="0"
                            app:arc_stroke_width="7dp"
                            app:arc_suffix_text="@string/degree_celcius"
                            app:arc_text_color="@color/colorPrimaryDark"
                            app:arc_unfinished_color="?android:textColorSecondary" />

                        <com.github.lzyzsd.circleprogress.ArcProgress
                            android:id="@+id/moisture_progress"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="5dp"
                            app:arc_bottom_text="@string/moisture"
                            app:arc_finished_color="@color/colorPrimary"
                            app:arc_progress="0"
                            app:arc_stroke_width="5dp"
                            app:arc_text_color="@color/colorPrimaryDark"
                            app:arc_unfinished_color="?android:textColorSecondary" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_control"
                        android:drawablePadding="10dp"
                        android:text="@string/device_control"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="34dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/water_pump"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_pump"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ProgressBar
                            android:id="@+id/progress_switch_pump"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_overlay_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_overlay"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>