<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:padding="50dp"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:text="Hello World!"
            android:src="@drawable/v_img_plant_iot"
            android:contentDescription="@string/des_plant_iot" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        >
        <Button
            android:id="@+id/btn_connect_via_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_shape_round_corner_normal_primary"
            android:text="@string/home_connect_bluetooth"
            android:textAllCaps="true"
            android:textColor="@color/txt_white"
            android:drawableStart="@drawable/ic_bluetooth_svg"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />

        <Button
            android:id="@+id/btn_connect_via_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_shape_round_corner_normal_primary"
            android:text="@string/home_connect_internet"
            android:textAllCaps="true"
            android:textColor="@color/txt_white"
            android:drawableStart="@drawable/ic_internet_svg"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>